# sofa

./: .gitmodules  CMakeLists.txt  README.md  README.txt  camera.hpp  defines.hpp  dft_example.cpp  fourier.cpp  fourier.h  fourier_opt_example.cpp  frame.hpp  gaussian_opt_example.cpp  interface.cpp  main.cpp  optimizer.cpp  quadratic_opt_example.cpp  run.sh  run_dft_example.sh  run_fourier_opt_example.sh  run_gaussian_opt_example.sh  run_interface.sh  run_optimizer.sh  run_optimizer2.sh  run_quadratic_opt_example.sh  run_simulator.sh  run_simulator_example.sh  shader.hpp  simulator.cpp  simulator.h  simulator_example.cpp  util.h
geometry/: cuboid.txt  quad.txt
shaders/: default_fragment_shader.glsl  default_vertex_shader.glsl  fragment_shader.glsl  loop_fragment_shader.glsl  simulator_fragment_shader.glsl  simulator_vertex_shader.glsl  slice_compute.glsl  slice_fragment.glsl  slice_sphere_compute.glsl  slice_vertex.glsl  vertex_shader.glsl
source/: main.cpp  multi_window.cpp  slice.cpp  utils.hpp
